--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,15 @@
     <string name="dummy">dummy</string>
     <string name="today">Today</string>
     <string name="settings">Settings</string>
+    <string name="event_title">Event title</string>
+    <string name="event_start_time">Start time</string>
+    <string name="event_end_time">End time</string>
+    <string name="stress_lvl">Stress level</string>
+    <string name="event_note">Event note</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
 
     <string-array name="months_array">
         <item>Jan</item>
