--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="self">self</string>
     <string name="system">system</string>
     <string name="peer">peer</string>
+    <string name="all_day">All-day</string>
 
     <string-array name="months_array">
         <item>Jan</item>
