--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,7 @@
     <string name="sign_up_now">Sign Up Now</string>
     <string name="signing_in">Signing in…</string>
     <string name="signing_up">Signing up…</string>
+    <string name="sunday_long">Sunday</string>
 
     <string-array name="months_array">
         <item>Jan</item>
