--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="url_event_create">http://165.246.43.162:4444/event_crt</string>
     <string name="url_event_edit">http://165.246.43.162:4444/event_edt</string>
     <string name="url_event_delete">http://165.246.43.162:4444/event_del</string>
+    <string name="url_events_fetch">http://165.246.43.162:4444/events_fetch</string>
     <string name="url_interv_create">http://165.246.43.162:4444/interv_crt</string>
     <string name="url_fetch_interv_system">http://165.246.43.162:4444/interv_syst</string>
     <string name="url_fetch_interv_peer">http://165.246.43.162:4444/interv_peer</string>
