--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,8 +35,8 @@
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="low">Not at all</string>
-    <string name="high">Extremelly stressed</string>
-    <string name="normal">Normal</string>
+    <string name="high">Extremely</string>
+    <string name="normal">Normally</string>
     <string name="btn_close">Close</string>
     <string name="more">More</string>
     <string name="intervention_method">Intervention method</string>
