--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,6 +109,8 @@
     <string name="_1_day_after">1 day after</string>
     <string name="intervention_reminder_text">Remind me %1$s event</string>
     <string name="event_notification">Event notification:</string>
+    <string name="log_out">Log out</string>
+    <string name="notifications_settings">Notifications settings</string>
 
     <string-array name="months_array">
         <item>Jan</item>
