--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,19 @@
 <resources>
     <!-- REST API Server URLs -->
-    <!-- MY PC IP: 165.246.43.162 -->
-    <!-- SR PC IP: 165.246.43.97 -->
-    <string name="url_user_register">http://165.246.43.97:4444/user_reg</string>
-    <string name="url_user_login">http://165.246.43.97:4444/user_lgn</string>
-    <string name="url_event_create">http://165.246.43.97:4444/event_crt</string>
-    <string name="url_event_edit">http://165.246.43.97:4444/event_edt</string>
-    <string name="url_event_delete">http://165.246.43.97:4444/event_del</string>
-    <string name="url_events_fetch">http://165.246.43.97:4444/events_fetch</string>
-    <string name="url_interv_create">http://165.246.43.97:4444/interv_crt</string>
-    <string name="url_interv_system_fetch">http://165.246.43.97:4444/interv_syst</string>
-    <string name="url_interv_peer_fetch">http://165.246.43.97:4444/interv_peer</string>
-    <string name="url_feedback_subm">http://165.246.43.97:4444/feedb_subm</string>
-    <string name="url_eval_subm">http://165.246.43.97:4444/eval_subm</string>
-    <string name="url_eval_fetch">http://165.246.43.97:4444/eval_fetch</string>
+    <string name="server_ip">165.246.43.162</string><!-- MY PC IP: 165.246.43.162 -->
+    <!--<string name="server_ip">165.246.43.97</string>&lt;!&ndash; SR PC IP: 165.246.43.97 &ndash;&gt;-->
+    <string name="url_user_register">http://%1$s:4444/user_reg</string>
+    <string name="url_user_login">http://%1$s:4444/user_lgn</string>
+    <string name="url_event_create">http://%1$s:4444/event_crt</string>
+    <string name="url_event_edit">http://%1$s:4444/event_edt</string>
+    <string name="url_event_delete">http://%1$s:4444/event_del</string>
+    <string name="url_events_fetch">http://%1$s:4444/events_fetch</string>
+    <string name="url_interv_create">http://%1$s:4444/interv_crt</string>
+    <string name="url_interv_system_fetch">http://%1$s:4444/interv_syst</string>
+    <string name="url_interv_peer_fetch">http://%1$s:4444/interv_peer</string>
+    <string name="url_feedback_subm">http://%1$s:4444/feedb_subm</string>
+    <string name="url_eval_subm">http://%1$s:4444/eval_subm</string>
+    <string name="url_eval_fetch">http://%1$s:4444/eval_fetch</string>
 
     <string name="app_name">Mind-Navigator application</string>
     <string name="month">Month</string>
