--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="url_eval_subm">http://%1$s:4444/eval_subm</string>
     <string name="url_eval_fetch">http://%1$s:4444/eval_fetch</string>
 
-    <string name="app_name">Mind-Navigator application</string>
+    <string name="app_name">Mind Navigator</string>
     <string name="month">Month</string>
     <string name="year">Year</string>
     <string name="previous_month">Previous month</string>
