--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,6 +133,8 @@
     <string name="average">Average</string>
     <string name="excellent">Excellent</string>
     <string name="journal">Journal</string>
+    <string name="ok">Ok</string>
+    <string name="custom">Custom</string>
 
     <string-array name="months_array">
         <item>Jan</item>
@@ -148,4 +150,11 @@
         <item>Nov</item>
         <item>Dec</item>
     </string-array>
+
+    <string-array name="reminder_array_spinner">
+        <item>Minutes before</item>
+        <item>Hours before</item>
+        <item>Days before</item>
+    </string-array>
+
 </resources>
