--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,7 +134,9 @@
     <string name="excellent">Excellent</string>
     <string name="journal">Journal</string>
     <string name="ok">OK</string>
-    <string name="custom">Custom</string>
+    <string name="custom">Custom...</string>
+    <string name="custom_reminder">Custom reminder</string>
+    <string name="custom_recurrence">Custom recurrence</string>
     <string name="repeat">Repeat</string>
     <string name="notification">Notification</string>
 
@@ -162,6 +164,13 @@
     <string-array name="reminder_array_spinner_2nd">
         <item>before</item>
         <item>after</item>
+    </string-array>
+
+    <string-array name="repeat_array_spinner">
+        <item>day</item>
+        <item>week</item>
+        <item>month</item>
+        <item>year</item>
     </string-array>
 
 </resources>
