erroneous, but repeat mode done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,7 +134,7 @@
     <string name="excellent">Excellent</string>
     <string name="journal">Journal</string>
     <string name="ok">OK</string>
-    <string name="custom">Custom...</string>
+    <string name="custom">Custom…</string>
     <string name="custom_reminder">Custom reminder</string>
     <string name="custom_recurrence">Custom recurrence</string>
     <string name="repeat">Repeat</string>
