--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,7 +97,7 @@
     <string name="intervention_scheduling">Intervention scheduling:</string>
     <string name="before_event">Before event</string>
     <string name="after_ecvent">After ecvent</string>
-    <string name="only_once">Only once</string>
+    <string name="only_oncehihine">Only once</string>
     <string name="everyday">Everyday</string>
     <string name="every_week">Every week</string>
     <string name="event_repeat_mode">Event repeat mode:</string>
@@ -117,7 +117,7 @@
     <string name="current_interv_title">Intervention: %1$s</string>
     <string name="event_done_check">Current event has been done.</string>
     <string name="expected_stress_level">Expected stress level</string>
-    <string name="real_stress_level">Real (resulting) stress level</string>
+    <string name="real_stress_level" translatable="false">Real (resulting) stress level</string>
     <string name="stress_incr_reason">Please, describe here what you think was the reason that made the real stress be higher than expected one.</string>
     <string name="stress_incr_title">Reason of difference between expected and real stress levels</string>
     <string name="sunday_time">Sunday evaluation reminder</string>
@@ -158,18 +158,18 @@
     <string name="not_evaluated">Not evaluated</string>
 
     <string-array name="months_array">
-        <item>Jan</item>
-        <item>Feb</item>
-        <item>Mar</item>
-        <item>Apr</item>
+        <item>January</item>
+        <item>February</item>
+        <item>March</item>
+        <item>April</item>
         <item>May</item>
-        <item>Jun</item>
-        <item>Jul</item>
-        <item>Aug</item>
-        <item>Sep</item>
-        <item>Oct</item>
-        <item>Nov</item>
-        <item>Dec</item>
+        <item>June</item>
+        <item>July</item>
+        <item>August</item>
+        <item>September</item>
+        <item>October</item>
+        <item>November</item>
+        <item>December</item>
     </string-array>
 
     <string-array name="time_scale_values">
