--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -17,12 +17,13 @@
     <string name="event_title_hint">제목, 시간, 예상되는 스트레스를 입력하세요</string>
     <string name="all_day">종일</string>
     <string name="event_start_time">시작 시간</string>
-    <string name="event_end_time">종료 시간gv</string>
+    <string name="event_end_time">종료 시간</string>
     <string name="notification">알림</string>
     <string name="repeat">반복</string>
     <string name="anticipated_stress_level">예상되는 스트레스 정도</string>
     <string name="intervention">스트레스 중재 방안</string>
     <string name="evaluation">평가</string>
+    <string name="re_evaluation">재평가</string>
     <string name="none">없음</string>
     <string name="_10_minutes_before">10분 전</string>
     <string name="_30_minutes_before">30분 전</string>
@@ -72,6 +73,92 @@
     <string name="after">후</string>
 
 
+
+
+
+
+
+
+
+    <string name="app_name">MindForecaster</string>
+    <string name="month">Month</string>
+    <string name="year">Year</string>
+    <string name="previous_month">Previous month</string>
+    <string name="next_month_arrow">Next month arrow</string>
+    <string name="dummy">dummy</string>
+    <string name="today">Today</string>
+    <string name="settings">Settings</string>
+    <string name="event_title">Event title</string>
+    <string name="event_note">Event note (optional)</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="btn_close">Close</string>
+    <string name="more">More</string>
+    <string name="intervention_method">Intervention method</string>
+    <string name="self">self</string>
+    <string name="system">system</string>
+    <string name="peer">peer</string>
+    <string name="selected_interv_hint">스트레스를 완화시킬 수 있는 자신만의 중재방안을 만들어보세요</string>
+    <string name="interventions_list">Please choose one of the options below:</string>
+    <string name="expand_button">Expand button</string>
+    <string name="arrow_down">Arrow down</string>
+    <string name="clock_image">Clock image</string>
+    <string name="repeat_notification">Repeat / Notification</string>
+    <string name="share">Share</string>
+    <string name="feedback">Feedback</string>
+    <string name="event_details">Event details</string>
+    <string name="bad">Bad</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+
+    <string name="sign_in">Sign in</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="not_a_member">Not a member yet?</string>
+    <string name="now">now</string>
+    <string name="sign_up_label"><u>Sign up</u></string>
+    <string name="sign_up">Sign up</string>
+    <string name="name">Full name</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="sign_up_now">Sign Up Now</string>
+    <string name="signing_in">Signing in…</string>
+    <string name="signing_up">Signing up…</string>
+    <string name="sunday_long">일요일</string>
+    <string name="text_image">Image of a letter</string>
+    <string name="before_event">Before event</string>
+    <string name="after_ecvent">After ecvent</string>
+    <string name="intervention_reminder_text">%1s에 알려줘</string>
+    <string name="log_out">Log out</string>
+    <string name="notifications_settings">Notifications settings</string>
+    <string name="current_event_title">일정: %1$s</string>
+    <string name="current_interv_title">중재방안: %1$s</string>
+    <string name="event_done_check">Current event has been done.</string>
+    <string name="real_stress_level" translatable="false">실제 일정에 대한 스트레스 레벨</string>
+    <string name="stress_incr_reason">스트레스 레벨이 예상한 것 보다 오히려 높아진 이유는 무엇입니까?</string>
+    <string name="stress_incr_title">스트레스 레벨 증가 원인</string>
+    <string name="ok">OK</string>
+    <string name="custom_reminder">Custom reminder</string>
+    <string name="custom_recurrence">Custom recurrence</string>
+    <string name="channel_name">Event and Intervention notifications</string>
+    <string name="channel_description">The notifications which user can receive on the specified event time, intervention time, or on a customized notification time in the properties of a particular event.</string>
+    <string name="notif_channel_id">mf-notifs</string>
+    <string name="custom_reminder_hint">Set reminder up to 20 days.</string>
+    <string name="value">Value</string>
+    <string name="daily_notif_request">Please, evaluate today\'s events!</string>
+    <string name="days">일</string>
+    <string name="hours">시</string>
+    <string name="minutes">분</string>
+    <string name="upcoming_event">for upcoming event</string>
+    <string name="passed_event">for passed event</string>
+
+
+
+
+
+
+
+
+
     <string-array name="months_array">
          <item> 1 월 </item>
          <item> 2 월 </item>
@@ -85,6 +172,12 @@
          <item> 10 월 </item>
          <item> 11 월 </item>
          <item> 12 월 </item>
+    </string-array>
+
+    <string-array name="time_scale_values">
+        <item>분</item>
+        <item>시</item>
+        <item>일</item>
     </string-array>
 
     <string-array name="time_direction_values">
