--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="repeat_notification">Repeat / Notification</string>
     <string name="share">Share</string>
     <string name="evaluation">Evaluation</string>
+    <string name="re_evaluation">Re-evaluation</string>
     <string name="feedback">Feedback</string>
     <string name="event_details">Event details</string>
     <string name="event">Event</string>
